Shrink whitespace around loading indicator and fix orb positioning

--- a/css/src/front-end.scss
+++ b/css/src/front-end.scss
@@ -392,17 +392,17 @@ body.embeded {
 	}
 
 	.loading-modal {
-		width: 220px;
+		width: 190px;
 		height: 30px;
 		background-color: #000;
 		position: absolute;
 		left: 50%;
-		margin-left: -150px;
+		margin-left: -115px;
 		top: 50%;
-		margin-top: -55px;
+		margin-top: -35px;
 		z-index: 101;
 		@include border-radius( 10px );
-		padding: 40px;
+		padding: 15px 20px 20px 20px;
 		font-size: 30px;
 		font-family: sans-serif;
 		text-align: center;
@@ -412,7 +412,7 @@ body.embeded {
 	.spinner {
 		//margin: 100px auto 0;
 		display: inline-block;
-		width: 70px;
+		//width: 70px;
 		text-align: center;
 	}
 
